colliander plenary lecture

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -116,8 +116,29 @@
 
         </div>
 #}
+      {#  <div class="page-header text-center"><h2>Organizing Committee<h2> </div>#}
+
         <div class="page-header text-center"><h2>Organizing Committee<h2> </div>
-        <div class="row text-center plenary">
+        <div class="col-10 col-centered hidden-xs text-center">
+
+             <div class="OrganizingCommittee"> <a href="http://www.matem.unam.mx/fsd/rolando/"><img src="img/FirstPage_rolando.png" alt="..." class="img-thumbnail text-center"><br>
+            <h4 class="text-muted">Rolando Jiménez</h4> <br> <h7>Instituto de Matemáticas, <br>UNAM</h7></a> </div>
+
+            <div class="OrganizingCommittee"> <a href="http://www.matmor.unam.mx/es/personal/investigadores/daniel/"> <img src="img/FirstPage_Daniel.png" alt="..." class="img-thumbnail text-center"><br>
+                <h4 class="text-muted">Daniel Juan</h4> <br><h7>Centro de Ciencias <br>Matemáticas, UNAM</h7> </a></div>
+
+            <div class="OrganizingCommittee"> <a href="http://www.matem.unam.mx/fsd/daniel/cv/cvguestfolder/cvguest2011-06-06/"><img src="img/FirstPage_silvia.png" alt="..." class="img-thumbnail text-center"><br>
+                <h4 class="text-muted">Silvia Millan</h4><br><h7>Instituto de Matemáticas, <br>UNAM</h7></a></div>
+
+            <div class="OrganizingCommittee"> <a href="http://www.matem.unam.mx/fsd/jseade/"><img src="img/FirstPage_seade.png" alt="..." class="img-thumbnail text-center"><br>
+                    <h4 class="text-muted">José A. Seade</h4><br><h7>Instituto de Matemáticas, <br>UNAM</h7></a></div>
+
+            <div class="OrganizingCommittee"> <a href="https://en.wikipedia.org/wiki/James_Colliander"><img src="img/FirstPage_colliander.png" alt="..." class="img-thumbnail text-center"><br>
+                    <h4 class="text-muted">James Colliander</h4> <br><h7>University of British <br>Columbia - PIMS </h7></a> </div>
+
+        </div>
+
+ {#       <div class="row text-center plenary">
             <div class="col-md-3"><img src="img/FirstPage_rolando.png" alt="..." class="img-thumbnail text-center"><br>
                 <h4 class="text-muted">Rolando Jiménez <br><small>Instituto de Matemáticas, UNAM</small></h4>
             </div>
@@ -130,22 +151,22 @@
             <div class="col-md-3"><img src="img/FirstPage_seade.png" alt="..." class="img-thumbnail text-center"><br>
                 <h4 class="text-muted">José A. Seade<br><small>Instituto de Matemáticas, UNAM</small></h4>
             </div>
-        </div>
+        </div>#}
 
         <div class="page-header text-center"><h2>Scientific Committee</h2></div>
         <div align="center">
-            <div><h4>Maria Chudnovskygh <br><small>Columbia University</small></h4></div>
-            <div><h4>Kenji Fukaya <br><small>Simons Center, Stony Brook</small></h4></div>
-            <div><h4>Peter Sarnak <br><small>Princeton</small></h4></div>
-            <div><h4>Jongil Park <br><small>Seoul National University</small></h4></div>
-            <div><h4>Kyoji Saito <br><small>Kavli-IPMU, Tokyo</small></h4></div>
-            <div><h4>Patricio Felmer <br><small>CMM, Universidad de Chile</small></h4></div>
-            <div><h4>Weinan E <br><small>Peking U/Princeton</small></h4></div>
-            <div><h4>Alan Carey <br><small>Aust.National University</small></h4></div>
-            <div><h4>Sujatha Ramdorai <br><small>UBC, Canada</small></h4></div>
-            <div><h4>Alberto Verjovsky <br><small>UNAM, Mexico</small></h4></div>
-            <div><h4>Hinke Osinga <br><small>University of Auckland</small></h4></div>
-            <div><h4>Alice Guionnet <br><small>MIT</small></h4></div>
+            <div><h4>Maria Chudnovskygh <br><small class="text-muted">Columbia University</small></h4></div>
+            <div><h4>Kenji Fukaya <br><small class="text-muted">Simons Center, Stony Brook</small></h4></div>
+            <div><h4>Peter Sarnak <br><small class="text-muted">Princeton</small></h4></div>
+            <div><h4>Jongil Park <br><small class="text-muted">Seoul National University</small></h4></div>
+            <div><h4>Kyoji Saito <br><small class="text-muted">Kavli-IPMU, Tokyo</small></h4></div>
+            <div><h4>Patricio Felmer <br><small class="text-muted">CMM, Universidad de Chile</small></h4></div>
+            <div><h4>Weinan E <br><small class="text-muted">Peking U/Princeton</small></h4></div>
+            <div><h4>Alan Carey <br><small class="text-muted">Aust.National University</small></h4></div>
+            <div><h4>Sujatha Ramdorai <br><small class="text-muted">UBC, Canada</small></h4></div>
+            <div><h4>Alberto Verjovsky <br><small class="text-muted">UNAM, Mexico</small></h4></div>
+            <div><h4>Hinke Osinga <br><small class="text-muted">University of Auckland</small></h4></div>
+            <div><h4>Alice Guionnet <br><small class="text-muted">MIT</small></h4></div>
         </div>
     </div>
 
