--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -63,13 +63,14 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>10:15-11:15</strong></div>
                                 <div class="panel-body">
-                                    <h4>Plenary Lecture PL 1</h4>
+                                    <h4>Maryam Mirzakhani <br> <small class="text-muted">Plenary Lecture PL 1</small></h4>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>11:15-12:15</strong></div>
                                 <div class="panel-body">
-                                    <h4>Plenary Lecture PL2</h4>
+                                    <h4>
+                                        Chenyang Xu <br><small class="text-muted">Plenary Lecture PL2</small></h4>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
@@ -168,31 +169,33 @@
                                     <h4></h4>
                                 </div>
                             </div>
+{#
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>20:00-21:00</strong></div>
                                 <div class="panel-body">
                                     <h4>Public Lecture</h4>
                                 </div>
                             </div>
+#}
                         </div>
                         <div role="tabpanel" class="tab-pane" id="tuesday">
                             {# Tuesday content #}
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>09:00-10:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Plenary Lecture PL 3</h4>
+                                    <h4>David Brydges <br> <small class="text-muted">Plenary Lecture PL 3</small></h4>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>10:00-11:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Plenary Lecture PL 4</h4>
+                                    <h4>Geoff Whittle <br> <small class="text-muted">Plenary Lecture PL 4</small></h4>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>11:00-12:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Plenary Lecture PL 5</h4>
+                                    <h4>Manuel del Pino <br><small class="text-muted">Plenary Lecture PL 5</small></h4>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
@@ -302,19 +305,20 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>09:00-10:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Plenary Lecture PL 6</h4>
+                                    <h4>Hee Oh <br><small class="text-muted"> Plenary Lecture PL 6</small></h4>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>10:00-11:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Plenary Lecture PL 7</h4>
+                                    <h4>William Duke <br><small class="text-muted"> Plenary Lecture PL 7</small></h4>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>11:00-12:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Plenary Lecture PL 8</h4>
+                                    <h4>Fernando Coda Marques <br>
+                                        <small class="text-muted"> Plenary Lecture PL 8</small></h4>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
@@ -341,19 +345,19 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>09:00-10:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Plenary Lecture PL 9</h4>
+                                    <h4>Ana Amador <br><small class="text-muted"> Plenary Lecture PL 9</small></h4>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>10:00-11:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Plenary Lecture PL 10</h4>
+                                    <h4>Hiraku Nakajima <br><small class="text-muted"> Plenary Lecture PL 10</small></h4>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>11:00-12:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Plenary Lecture PL 11</h4>
+                                    <h4> Lexing Ying <br>  <small class="text-muted"> Plenary Lecture PL 11</small></h4>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
@@ -444,6 +448,13 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="panel panel-timeline text-center">
+                                <div class="panel-heading"><strong>20:00-21:00</strong></div>
+                                <div class="panel-body">
+                                    <h4>Public Lecture</h4>
+                                </div>
+                            </div>
+
 
 
                         </div>
@@ -452,19 +463,20 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>09:00-10:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Plenary Lecture PL 12</h4>
+                                    <h4>Mariel Vazquez <br> <small class="text-muted">Plenary Lecture PL 12 </small></h4>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>10:00-11:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Plenary Lecture PL 13</h4>
+                                    <h4>Alexey Bondal
+                                        <br><small class="text-muted">Plenary Lecture PL 13</small></h4>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>11:00-12:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Plenary Lecture PL 14</h4>
+                                    <h4>Ian Agol <br><small class="text-muted">Plenary Lecture PL 14</small></h4>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
