--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -295,7 +295,7 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>20:00-21:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Public Lecture</h4>
+                                    <h4>Mariel Vazquez <br> Public Lecture</h4>
                                 </div>
                             </div>
                         </div>
@@ -317,7 +317,7 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>11:00-12:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Fernando Coda Marques <br>
+                                    <h4>Fernando Codá Marques <br>
                                         <small class="text-muted"> Plenary Lecture PL 8</small></h4>
                                 </div>
                             </div>
@@ -451,7 +451,7 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>20:00-21:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>Public Lecture</h4>
+                                    <h4>PRIMA Assambly</h4>
                                 </div>
                             </div>
 
