--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -451,7 +451,7 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>20:00-21:00</strong></div>
                                 <div class="panel-body">
-                                    <h4>PRIMA Assambly</h4>
+                                    <h4>PRIMA Assembly</h4>
                                 </div>
                             </div>
 
