--- a/views/oaxaca.html.twig
+++ b/views/oaxaca.html.twig
@@ -10,8 +10,7 @@
                     <h1>Oaxaca</h1>
                     <p class="text-left">
                         <h4>
-                        Oaxaca (pronounced wa-hah-kah), founded in 1532, is a city located about 400km south of Mexico City, is the capital of the state of the same name. It has a mild climate, due to its altitude of 1555m above sea level. Rich in history and culture, Oaxaca is a fascinating destination, sometimes considered "Mexico's culinary and art capital". Archeology, ancient civilizations, colonial art and architecture, can be appreciated. It is a safe city, full with vibrant cultural traditions.
-                        </h4>
+                        The city of Oaxaca, is one of the most important architectural patrimonies of the country; The great wealth of its monumental buildings of the sixteenth century, where the exuberance of its sculpture and religious painting of baroque and churrigueresque styles, present in façades, altarpieces and plasterwork, stands out in harmonious contrast with buildings of neoclassical and art-nouveau influence of the time Independent of Mexico and that since 1987 is considered as Cultural Heritage of Humanity by UNESCO.                        </h4>
                     </p>
                 </div>
             </div>
@@ -39,6 +38,27 @@
                     Instituto Tecnológico de Oaxaca (ITO)
                     Avenida Ing. Víctor Bravo Ahuja No. 125 Esquina Calzada Tecnológico, C.P. 68030
                     All academic activities will take place here.
+                </p>
+            </div>
+        </div>
+
+        <h4>Flight Coupon with AEROMEXICO</h4>
+        <div class="row">
+
+            <div class="col-lg-6">
+                <h5> Valid only: August 8 to 20 , 2017 </h5> <br>
+                Discount Code:<h4>IT15RGB0417N1</h4>
+
+
+                <p class="oaxaca-p">
+                    * NATIONAL 15%, INTERNATIONAL 10% DISCOUNT ON ALL TARIFF STRUCTURE EXCEPT CLASSES: V, R, N, I. <br>
+                    * APPLY ALL FLIGHTS OF AIRPLANE AND OPERATED BY AEROMEXICO.<br>
+                    * DO NOT APPLY FLIGHTS WITH SHARED CODE.<br>
+                    * RESERVATION AND SALE IN: OFFICES OF DIRECT SALE AND CALL CENTER OF AEROMEXICO.<br>
+                    * THE DISCOUNT APPLIES AT THE TIME OF THE TICKET EXPEDITION.<br>
+                    * INTERESTED PRESENT LETTER / INVITATION / REGISTRATION FORM.<br>
+                    * IN THE EVENT THAT A CHANGE OF DATE OR SCHEDULE SHALL BE APPLIED THE CHANGE CHARGES CORRESPONDING TO THE TARIFF REGULATION, AS WELL AS THE RATE DIFFERENCE IN CASE THAT THE ORIGINALLY RESERVED CLASS DOES NOT EXIST.<br>
+                    <h4>Discount Code: <a href="img/aeromexico.pdf" target="_blank">HERE </a></h4>
                 </p>
             </div>
         </div>
