--- a/views/oaxaca.html.twig
+++ b/views/oaxaca.html.twig
@@ -31,7 +31,7 @@
         <h4>Conference venue</h4>
         <div class="row">
 
-            <div class="col-lg-6">
+            <div class="col-lg-12">
                 <h5>                    Check if you need a VISA to visit Mexico!!!
                 </h5>
                 <p class="oaxaca-p">
@@ -118,6 +118,17 @@
             All rates and discounts are subject to availability.<br>
             Don´t include tips.<br>
         </p>
+
+        <div> <h4> <div class="well">Spoiler Alert </div> <br>
+                <div class="media-body plenary"> Check out the all the awesome things to do and see in Oaxaca</div>
+
+            </h4>
+            <iframe width="300" height="169" src="https://www.youtube.com/embed/BqEDLFY_ceA" frameborder="0" allowfullscreen></iframe>
+            <iframe width="300" height="169" src="https://www.youtube.com/embed/48PODmk2Xe8" frameborder="0" allowfullscreen></iframe>
+            <iframe width="300" height="169" src="https://www.youtube.com/embed/PpRWmDo0Fl4" frameborder="0" allowfullscreen></iframe>
+
+        </div>
+
 
         <div class="page-header text-center"><h2>Location<h2></div>
     </div>
