--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -53,8 +53,10 @@
                 <img class="four-slide" src="img/banner4.png" alt="Four slide">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1> Application for FINANCIAL ASSISTANCE  <br>is NOW  available!!!!
-                        <br> <h3>until May 15 2017</h3>
+                        <h1> Application for FINANCIAL ASSISTANCE  Re Open!!!!<br>
+                            <br>Apply Now
+
+                        <br> <h3>until June 15 2017</h3>
                         </h1>
                         <p><a href="http://gaspacho.matmor.unam.mx/prima/financial/new" class="btn btn-primary btn-lg">click here</a></p>
 
