--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -176,7 +176,7 @@
 
         <div class="page-header text-center"><h2>Scientific Committee</h2></div>
         <div align="center">
-            <div><h4>Maria Chudnovskygh <br><small class="text-muted">Columbia University</small></h4></div>
+            <div><h4>Maria Chudnovsky <br><small class="text-muted">Columbia University</small></h4></div>
             <div><h4>Kenji Fukaya <br><small class="text-muted">Simons Center, Stony Brook</small></h4></div>
             <div><h4>Peter Sarnak <br><small class="text-muted">Princeton</small></h4></div>
             <div><h4>Jongil Park <br><small class="text-muted">Seoul National University</small></h4></div>
