- Financial Assistance acceptance list - Register date limit banner

--- a/views/financial.html.twig
+++ b/views/financial.html.twig
@@ -2,10 +2,124 @@
 
 {% block content %}
 
-    <div class="prima-title"><strong>FINANCIAL ASSISTANCE</strong></div>
-    <div class="container prima-content">
-        <p align="center">Coming Soon.
-        </p>
+    <div class="prima-title">
+        <strong>FINANCIAL ASSISTANCE<br>
+            deadline: June 15 2017
+        </strong>
     </div>
 
+    <div class="container prima-content">
+        <div class="prima-title">Acceptance List</div><br>
+
+        <div class="row">
+            <div class="col-md-4">
+                <table class="table table-condensed">
+                    <tr><td>Ahumada Gómez Andrés</td></tr>
+                    <tr><td>Alberto Antonio Pedro</td></tr>
+                    <tr><td>Alejandría Dosal-Trujillo Loiret</td></tr>
+                    <tr><td>Alejandro Arellano Cesar</td></tr>
+                    <tr><td>Alejandro Espinosa Garcia Manuel</td></tr>
+                    <tr><td>Alejandro Ucan Puc Manuel</td></tr>
+                    <tr><td>Aliniaeifard Farid</td></tr>
+                    <tr><td>Amaro Aceves José Gilberto</td></tr>
+                    <tr><td>Anderson Hepler Brian</td></tr>
+                    <tr><td>Andrés Lozoya Ponce Daniel</td></tr>
+                    <tr><td>Angel Frias Garcia Jose</td></tr>
+                    <tr><td>Angel Gutierrez Luis</td></tr>
+                    <tr><td>Anthony Quinn Joseph</td></tr>
+                    <tr><td>Antonio Faya Jorge</td></tr>
+                    <tr><td>Arenas Herrera María Ivonne</td></tr>
+                    <tr><td>Arista Jonas</td></tr>
+                    <tr><td>ARIZMENDI ECHEGARAY OCTAVIO</td></tr>
+                    <tr><td>Badilla Céspedes Wágner</td></tr>
+                    <tr><td>Cabrera Alejandro</td></tr>
+                    <tr><td>Calles Loperena José Jaime</td></tr>
+                    <tr><td>Campos Cordero Judith</td></tr>
+                    <tr><td>Carlos Calleja Renato</td></tr>
+                    <tr><td>CESAR CORREA JULIO</td></tr>
+                    <tr><td>César Magaña Cáceres Julio</td></tr>
+                    <tr><td>Clara Fittipaldi Maria</td></tr>
+                    <tr><td>Colmenarejo Hernando Laura</td></tr>
+                    <tr><td>Cristobal Nunez-Betancourt Luis</td></tr>
+                    <tr><td>Cruz Diaz Inti</td></tr>
+                    <tr><td>Cruz Rodriguez Manuel</td></tr>
+                    <tr><td>D Montaño Jonathan</td></tr>
+                    <tr><td>David Montoya Zambrano Cristhian</td></tr>
+                    <tr><td>Davila Figueroa Rodrigo</td></tr>
+                </table>
+            </div>
+            <div class="col-md-4">
+                <table class="table table-condensed">
+                    <tr><td>De Nova Vázquez Monica</td></tr>
+                    <tr><td>Dennise Garcia Cynthia</td></tr>
+                    <tr><td>Eduardo Garcia Hernandez Luis</td></tr>
+                    <tr><td>Eduardo Núñez Ortiz José</td></tr>
+                    <tr><td>Eduardo Simental Rodriguez Jose</td></tr>
+                    <tr><td>Elias Mochan Quesnel Jaime</td></tr>
+                    <tr><td>Emmanuel Garay Cristhian</td></tr>
+                    <tr><td>Enrique Moreira Pablo</td></tr>
+                    <tr><td>Ernesto Hidber Cruz Cristhian</td></tr>
+                    <tr><td>Estephania Harris Pamela</td></tr>
+                    <tr><td>Flores Soto Víctor Hugo</td></tr>
+                    <tr><td>Gallego Fernando</td></tr>
+                    <tr><td>GARCIA AZPEITIA CARLOS</td></tr>
+                    <tr><td>García Hernández Samuel</td></tr>
+                    <tr><td>Gonzalez Santiesteban Noel</td></tr>
+                    <tr><td>Guadarrama Garcia Miguel Angel</td></tr>
+                    <tr><td>Gustavo Garza Gaona Lino</td></tr>
+                    <tr><td>Hekmati Pedram</td></tr>
+                    <tr><td>Hermelindo Otero Rubio Ignacio</td></tr>
+                    <tr><td>Hernández Quintero Anatolio</td></tr>
+                    <tr><td>Hinojosa Gabriela</td></tr>
+                    <tr><td>Humberto Munive Lima Isidro</td></tr>
+                    <tr><td>Indhavani Garcia Sandra</td></tr>
+                    <tr><td>Israel Hernández Vélez César</td></tr>
+                    <tr><td>Johanna González Cely Leidy</td></tr>
+                    <tr><td>JULIO BATALLA JURGEN ALFREDO</td></tr>
+                    <tr><td>Katterin Prieto Montañez Yulieth</td></tr>
+                    <tr><td>Lauve Aaron</td></tr>
+                    <tr><td>Li Shu Xiao</td></tr>
+                    <tr><td>Luis del Hoyo Matias</td></tr>
+                    <tr><td>Luviano Flores Johana</td></tr>
+                    <tr><td>Maldonado Herrera José Rubén</td></tr>
+                </table>
+            </div>
+            <div class="col-md-4">
+                <table class="table table-condensed">
+                    <tr><td>Manuel Guzmán Jiménez Carlos</td></tr>
+                    <tr><td>Martin del Campo Abraham</td></tr>
+                    <tr><td>Martinez Balvanera Santiago</td></tr>
+                    <tr><td>Martinez Juarez Iker</td></tr>
+                    <tr><td>Mayela Gutiérrez Mejía Bárbara</td></tr>
+                    <tr><td>MUKHTAR MUZAMMIL</td></tr>
+                    <tr><td>NICOLAS CHACON RICHAR</td></tr>
+                    <tr><td>Pablo Díaz Juan</td></tr>
+                    <tr><td>Palma Márquez Jesús Alberto</td></tr>
+                    <tr><td>Pedro Montejano Luis</td></tr>
+                    <tr><td>Pelaez Pablo</td></tr>
+                    <tr><td>Ramírez García Miriam</td></tr>
+                    <tr><td>Ramírez-Ibáñez Marcelino</td></tr>
+                    <tr><td>René González-Martínez Jorge</td></tr>
+                    <tr><td>Ríos Ortiz Ángel David</td></tr>
+                    <tr><td>Robles Arenas Macarena Covadonga</td></tr>
+                    <tr><td>Rodríguez Martínez José de Jesús</td></tr>
+                    <tr><td>Rubio Cortés Rolando Romeo</td></tr>
+                    <tr><td>Ruby Becerra Enrique</td></tr>
+                    <tr><td>Sorcar Gangotryi</td></tr>
+                    <tr><td>Tellez Ivan</td></tr>
+                    <tr><td>Tomás Alvarez Anayeli</td></tr>
+                    <tr><td>Torres Orozco Román Jonatán</td></tr>
+                    <tr><td>Trong Do Hoang</td></tr>
+                    <tr><td>Trujillo Negrete Alejandra</td></tr>
+                    <tr><td>VARGAS LOZADA Yannic</td></tr>
+                    <tr><td>Vázquez Navarro Ernesto Alejandro</td></tr>
+                    <tr><td>Velasco-Barreras Eduardo</td></tr>
+                    <tr><td>Velázquez Inzunza Yajaida Noraly</td></tr>
+                    <tr><td>Villicaña Molina Yesenia</td></tr>
+                    <tr><td>Vite Escobedo Lilia Montserrat</td></tr>
+                    <tr><td>Yarza Acuña Sergio Enrique</td></tr>
+                </table>
+            </div>
+        </div>
+    </div>
 {% endblock %}
