--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -53,12 +53,12 @@
                 <img class="four-slide" src="img/banner4.png" alt="Four slide">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1> Application for FINANCIAL ASSISTANCE  Re Open!!!!<br>
-                            <br>Apply Now
+                        <h1> Online Registration until July 31th<br>
+                            <br>Register Now
 
-                        <br> <h3>until June 15 2017</h3>
-                        </h1>
-                        <p><a href="http://gaspacho.matmor.unam.mx/prima/financial/new" class="btn btn-primary btn-lg">click here</a></p>
+                        {#<br> <h3>You will be able to register on site</h3>#}
+                        </h1><br>
+                        <p><a href="https://prima2017.math.unam.mx/registration" class="btn btn-primary btn-lg">click here</a></p>
 
                         <div class="page-header"></div>
                     </div>
