- Resumenes de 2 plenarios

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -319,6 +319,19 @@
                                 <div class="panel-body">
                                     <h4>Fernando Codá Marques <br>
                                         <small class="text-muted"> Plenary Lecture PL 8</small></h4>
+                                    <a data-toggle="collapse" href="#fernandoCoda" aria-expanded="false" aria-controls="fernandoCoda">
+                                        <strong>Minimal hypersurfaces and a Weyl law for the volume spectrum</strong>
+                                    </a>
+                                    <div class="collapse" id="fernandoCoda">
+                                        <div class="well text-left">
+                                            In 1911, Hermann Weyl proved a universal formula  that describes
+                                            the asymptotic behavior of the eigenvalues of the Laplacian. I will discuss
+                                            a proof (joint work with Liokumovich and Neves) of a Weyl law for the
+                                            volume spectrum, as conjectured by Gromov. The eigenvalues of the Laplacian
+                                            are replaced by the areas of minimal hypersurfaces constructed by minimax
+                                            methods.
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
@@ -477,6 +490,19 @@
                                 <div class="panel-heading"><strong>11:00-12:00</strong></div>
                                 <div class="panel-body">
                                     <h4>Ian Agol <br><small class="text-muted">Plenary Lecture PL 14</small></h4>
+                                    <a data-toggle="collapse" href="#ianAgol" aria-expanded="false" aria-controls="ianAgol">
+                                        <strong>Coloring problems for maps on surfaces</strong>
+                                    </a>
+                                    <div class="collapse" id="ianAgol">
+                                        <div class="well text-left">
+                                            We'll discuss colorings of certain sorts of maps on surfaces. The first case is quadrangulations of the
+                                            plane satisfying a combinatorial condition. We generalize a result that Penrose tilings (and more generally tilings
+                                            by parallelograms) are 3-colorable to this more general class of quadrangulations. The second question we'll
+                                            consider is whether maps on compact surfaces have a finite-sheeted cover which is 4-colorable. We'll describe some preliminary
+                                            results on this question, and explain a possible reduction to a question about measure-preserving actions of free
+                                            groups on colorings of a graph.
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
